Sat Dec 15 23:56:51 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/fiddle/pointer.c (rb_fiddle_ptr2cptr): fix error message
	  forgotten to be changed from DL to Fiddle.

Sat Dec 15 23:14:32 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (default_handler): remove rb_register_sigaltstack()
	  call. sigaltstack was already registered when creating threads.

Sat Dec 15 23:08:56 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (rb_sigaltstack_size): new. calculate stack size for
	  sigsegv handler. enlarge value when x86 or x86_64 on Linux.
	  Linux has very small MINSIGSTKSZ size (2048 bytes) and
	  our sigsegv routine need 5KiB at least. [Bug #7141]
	* internal.h: add declaration of rb_sigaltstack_size().
	* vm_core.h: remove ALT_STACK_SIZE definition.

	* signal.c (rb_register_sigaltstack): replace ALT_STACK_SIZE with
	  rb_sigaltstack_size();
	* gc.c (Init_heap): ditto.
	* vm.c (th_init): ditto.

Sat Dec 15 18:24:21 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (f_round_common): should check overflow.

Sat Dec 15 18:00:00 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_rationalize): reduced.

Sat Dec 15 14:18:44 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (finish_writeconv): uses rb_write_internal2 if
	  fptr->write_lock have.

Sat Dec 15 13:57:08 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_owned_p): remove static.
	* io.c (io_flush_buffer): don't hold mutex if already have.
	  Now recursive lock may occur when following scenario.
	  fptr_finalize -> finish_writeconv_sync -> finish_writeconv
	  -> io_fflush.

Sat Dec 15 13:38:30 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_flush_buffer): uses io_flush_buffer_async2 instead of
	  io_flush_buffer_async.
	* io.c (io_flush_buffer_async2): new helper function for
	  io_flush_buffer. It uses rb_thread_call_without_gvl2() instead
	  of rb_thread_io_blocking_region.